resolved some comments FINAL_4